# grpc-postgres-template

./: .gitignore  Cargo.toml  build.rs
proto/: error.proto  errors.proto  notifier.proto
src/: config.rs  error.rs  main.rs  notifier.rs  repo.rs  service.rs  util.rs
src/proto/: errors.rs  mod.rs  push.rs
