[package]
name = "srv1"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
bytes = "0.5"
base64 = "0.12"
async-trait = "0.1.30"
futures= "0.3"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2"
prost = "0.6"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid" ] }

[build-dependencies]
tonic-build = "0.2"